--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,8 @@
     </head>
     <body>
         <div id="content">
-            {%- block content %}{%- endblock %}
+            {%- block content %}
+            {%- endblock %}
         </div>
     </body>
 </html>
