--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     {% if questions %}
     <div>
         <form action="{{ url_for('search_questions') }}">
-            <input type="text" name="search-phrase" autofocus />
+            <input type="text" name="q" autofocus />
             <input type="submit" value="Search" />
         </form>
     </div>
