--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,12 @@
         </form>
     </div>
     <div>
+    {% if not five %}
+    <br />
+    <span><a href="/list">Reset column order</a></span>
+    {% endif %}
+    </div>
+    <div>
         <table id="questions-table">
             <thead>
                 <th>{% if five %} Submission Time {% else %} <a href="/list?{{ link.time }}">Submisson Time</a> {% endif %}</th>
